--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
-    <string name="app_name">watts-hut</string>
+    <string name="app_name">Watts Hut</string>
     <string name="image_api_url">http://image.tmdb.org/t/p/%1$s%2$s</string>
     <string name="movie_api_url">https://api.themoviedb.org/3/discover/movie</string>
+    <string name="movie_api_popular">http://api.themoviedb.org/3/movie/popular</string>
+    <string name="movie_api_top_rate">http://api.themoviedb.org/3/movie/top_rated</string>
     <string-array name="movie_api_sizes">
         <item>w185</item>
         <item>w92</item>
@@ -17,6 +19,7 @@
     <string name="movie_api_param_sort">sort_by</string>
     <string name="movie_api_param_page">page</string>
     <string name="movie_api_results_image">poster_path</string>
+    <string name="loading">loading</string>
     <string-array name="movie_api_sorting">
         <item>popularity.asc</item>
         <item>popularity.desc</item>
