Fixes #10 Fixes #9 Fixes #20 Fixes #22 - Created detailed layout. Tweaked the menubar to have a sorting button top right, either top rated or popular. Added sorting behavior with caching of the datasets for the recycler view. Added separate page count for both api entrypoint.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="movie_api_param_page">page</string>
     <string name="movie_api_results_image">poster_path</string>
     <string name="loading">loading</string>
+    <string name="sort_by_top">Top Rated</string>
+    <string name="sort_by_popular">Popular</string>
     <string-array name="movie_api_sorting">
         <item>popularity.asc</item>
         <item>popularity.desc</item>
