Fixes #3 - Fixes #7 - Fixes #24 - Fixes #25 ; Added detail activity and intents. MovieObjects are parcelable and passed between activities. Data is loaded into the new detail activity. Conforms to specs.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
         <item>vote_count.asc</item>
         <item>vote_count.desc</item>
     </string-array>
+    <string name="title_activity_movie_details">movieDetails</string>
 </resources>
